// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_expr.row.collection;

message ProtoRowCollection {
  bytes encoded = 1;
  repeated ProtoEncodedRowMetadata metadata = 2;
  repeated uint64 runs = 3;
}

message ProtoEncodedRowMetadata {
  uint64 offset = 1;
  uint64 diff = 2;
}
